added some dummy api and models, still need patch to work and some testing. then its time to remove hello_world stuffz... time to sleep now :)
