# generators/app/templates/src/api/swagger/swagger.yaml
@@ -42,10 +42,215 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+
+  /person/{id}:
+    x-swagger-router-controller: person
+    get:
+      description: Gets a specific person
+      operationId: show
+      parameters:
+        - name: id
+          in: path
+          description: id of user
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/PersonResponse"
+
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+    put:
+      description: upsert a person
+      operationId: upsert
+      parameters:
+        - name: id
+          in: path
+          description: id of user
+          required: true
+          type: string
+        - name: name
+          in: formData
+          description: the new name of the person
+          required: true
+          type: string
+        - name: description
+          in: formData
+          description: the description of a person
+          required: true
+          type: string
+        - name: age
+          in: formData
+          description: the age of a person
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/PersonResponse"
+
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+    patch:
+      description: partial update of a person
+      operationId: patch
+      parameters:
+        - name: id
+          in: path
+          description: id of user
+          required: true
+          type: string
+        - name: JsonPatch
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/PatchRequest"
+
+      responses:
+        "204":
+          description: Success
+          schema:
+            $ref: "#/definitions/PersonResponse"
+
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+    delete:
+      description: delete a specific user
+      operationId: destroy
+      parameters:
+        - name: id
+          in: path
+          description: id of user
+          required: true
+          type: string
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+        default:
+            description: Error
+            schema:
+              $ref: "#/definitions/ErrorResponse"
+  /person:
+    x-swagger-router-controller: person
+    get:
+      description: Returns a list of all persons
+      operationId: index
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/PersonListResponse"
+
+    post:
+      description: Creates a person
+      operationId: create
+      parameters:
+        - name: name
+          in: formData
+          description: the new name of the person
+          required: true
+          type: string
+        - name: description
+          in: formData
+          description: the description of a person
+          required: true
+          type: string
+        - name: age
+          in: formData
+          description: the age of a person
+          required: true
+          type: integer
+      responses:
+        "201":
+          description: Success
+          schema:
+            $ref: "#/definitions/PersonResponse"
+
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
+  PersonListResponse:
+    required:
+      - persons
+    properties:
+      persons:
+        type: array
+        items:
+          type: object
+          properties:
+            _id:
+              type: string
+            name:
+              type: string
+            description:
+              type: string
+            age:
+              type: integer
+
+  PersonResponse:
+    required:
+      - _id
+    properties:
+      _id:
+        type: string
+      name:
+        type: string
+      description:
+        type: string
+      age:
+        type: integer
+
+  PatchRequest:
+    type: array
+    items:
+      $ref: "#/definitions/PatchDocument"
+
+  PatchDocument:
+    description: A JSONPatch document as defined by RFC 6902
+    required:
+     - "op"
+     - "path"
+    properties:
+     op:
+      type: string
+      description: The operation to be performed
+      enum:
+       - "add"
+       - "remove"
+       - "replace"
+       - "move"
+       - "copy"
+       - "test"
+     path:
+      type: string
+      description: A JSON-Pointer
+     value:
+      type: object
+      description: The value to be used within the operations.
+     from:
+      type: string
+      description: A string containing a JSON Pointer value.
+
   HelloWorldResponse:
     required:
       - message
@@ -53,6 +258,12 @@ definitions:
       message:
         type: string
   ErrorResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
+  SuccessResponse:
     required:
       - message
     properties:
